--- a/content/resources/8-231f06-th.md
+++ b/content/resources/8-231f06-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/8-231-physics-of-solids-i-fall-2006/4f010fde3e0ca8e102b5a21f8adbe1da_8-231f06-th.jpg
+file: /media/courses/8-231-physics-of-solids-i-fall-2006/4f010fde3e0ca8e102b5a21f8adbe1da_8-231f06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A synthetic bismuth crystal. The bottom front edge has a length of about
@@ -10,6 +10,8 @@ image_metadata:
     (Image courtesy of Wikipedia user Dschwen.)
   credit: ''
   image-alt: An irridescent synthetic bismuth crystal.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 8-231f06-th.jpg
 uid: 4f010fde-3e0c-a8e1-02b5-a21f8adbe1da
