--- a/content/resources/8-231f06.md
+++ b/content/resources/8-231f06.md
@@ -4,7 +4,7 @@ description: A synthetic bismuth crystal. The bottom front edge has a length of 
   3.5cm. The irridescent color is created due to interference effects in a thin oxide
   layer, which forms when the hot crystal is pulled out of the bismuth melt. (Image
   courtesy of Wikipedia user Dschwen.)
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/8-231-physics-of-solids-i-fall-2006/e79b26361ce45a8494211b3e0c2a14e0_8-231f06.jpg
+file: /media/courses/8-231-physics-of-solids-i-fall-2006/e79b26361ce45a8494211b3e0c2a14e0_8-231f06.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A synthetic bismuth crystal. The bottom front edge has a length of about
@@ -13,6 +13,8 @@ image_metadata:
     (Image courtesy of Wikipedia user Dschwen.)
   credit: ''
   image-alt: An irridescent synthetic bismuth crystal.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 8-231f06.jpg
 uid: e79b2636-1ce4-5a84-9421-1b3e0c2a14e0
