Sync all content

--- a/content/resources/8-231f06-th.md
+++ b/content/resources/8-231f06-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/8-231-physics-of-solids-i-fall-2006/4f010fde3e0ca8e102b5a21f8adbe1da_8-231f06-th.jpg
+file: /courses/8-231-physics-of-solids-i-fall-2006/4f010fde3e0ca8e102b5a21f8adbe1da_8-231f06-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A synthetic bismuth crystal. The bottom front edge has a length of about
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 8-231f06-th.jpg
 uid: 4f010fde-3e0c-a8e1-02b5-a21f8adbe1da
 ---
+New image Upload
+
