--- a/content/resources/8-231f06-th.md
+++ b/content/resources/8-231f06-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: An irridescent synthetic bismuth crystal.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 8-231f06-th.jpg
 uid: 4f010fde-3e0c-a8e1-02b5-a21f8adbe1da
 ---
 New image Upload
-
