--- a/content/resources/8-231f06.md
+++ b/content/resources/8-231f06.md
@@ -14,10 +14,10 @@ image_metadata:
   credit: ''
   image-alt: An irridescent synthetic bismuth crystal.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 8-231f06.jpg
 uid: e79b2636-1ce4-5a84-9421-1b3e0c2a14e0
 ---
 A synthetic bismuth crystal. The bottom front edge has a length of about 3.5cm. The irridescent color is created due to interference effects in a thin oxide layer, which forms when the hot crystal is pulled out of the bismuth melt. (Image courtesy of Wikipedia user Dschwen.)
-
