--- a/content/resources/8-231f06-th.md
+++ b/content/resources/8-231f06-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/8-231-physics-of-solids-i-fall-2006/4f010fde3e0ca8e102b5a21f8adbe1da_8-231f06-th.jpg
+file_size: 12278
 file_type: image/jpeg
 image_metadata:
   caption: A synthetic bismuth crystal. The bottom front edge has a length of about
